test: amend run command for docker container in all molecule scenarios
As noted by @russoz

--- a/extensions/molecule/integration_test/molecule.yml
+++ b/extensions/molecule/integration_test/molecule.yml
@@ -7,15 +7,15 @@ driver:
 platforms:
   - name: openwrt_x86_64-25.12.0-rc4
     image: openwrt/rootfs:x86_64-25.12.0-rc4
-    command: sh -c "mkdir -p /var/lock; sleep infinity"
+    command: /sbin/init
     pre_build_image: true
   - name: openwrt_x86_64-24.10.4
     image: openwrt/rootfs:x86_64-24.10.4
-    command: sh -c "mkdir -p /var/lock; sleep infinity"
+    command: /sbin/init
     pre_build_image: true
   - name: openwrt_x86_64-23.05.6
     image: openwrt/rootfs:x86_64-23.05.6
-    command: sh -c "mkdir -p /var/lock; sleep infinity"
+    command: /sbin/init
     pre_build_image: true
 scenario:
   test_sequence:
