--- a/extensions/molecule/default/converge.yml
+++ b/extensions/molecule/default/converge.yml
@@ -214,13 +214,8 @@
           community.openwrt.command:
             cmd: service cron enabled
           changed_when: false
-          failed_when: false
+          failed_when: cron_enabled.rc == 0
           register: cron_enabled
-
-        - name: Assert cron service status
-          ansible.builtin.assert:
-            that:
-              - cron_enabled.rc != 0
 
         - name: Enable cron service
           community.openwrt.service:
@@ -231,13 +226,8 @@
           community.openwrt.command:
             cmd: service cron enabled
           changed_when: false
-          failed_when: false
+          failed_when: cron_enabled.rc != 0
           register: cron_enabled
-
-        - name: Assert cron service status
-          ansible.builtin.assert:
-            that:
-              - cron_enabled.rc == 0
 
         - name: Start cron service
           community.openwrt.service:
