--- a/extensions/molecule/default/molecule.yml
+++ b/extensions/molecule/default/molecule.yml
@@ -7,7 +7,7 @@ driver:
 platforms:
   - name: openwrt_x86_64-${OPENWRT_VERSION:-24.10.4}
     image: openwrt/rootfs:x86_64-${OPENWRT_VERSION:-24.10.4}
-    command: /sbin/init # required for proper ubus initialization
+    command: /sbin/init
     pre_build_image: true
 scenario:
   test_sequence:
