feat: improve assert condition in `tempfile` tests
Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

--- a/tests/integration/targets/tempfile/tasks/main.yml
+++ b/tests/integration/targets/tempfile/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: Assert `/tmp` value is part of temp file path
   ansible.builtin.assert:
     that:
-      - test_tempfile.path | regex_search("/tmp")
+      - test_tempfile.path.startswith("/tmp/test")
 
 - name: Remove tempfile
   community.openwrt.file:
