feat: assert that tempfile is actually a file
Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

--- a/tests/integration/targets/tempfile/tasks/main.yml
+++ b/tests/integration/targets/tempfile/tasks/main.yml
@@ -18,6 +18,7 @@
   ansible.builtin.assert:
     that:
       - test_file_check_result.stat.exists
+      - test_file_check_result.stat.isreg
 
 - name: Assert `/tmp` value is part of temp file path
   ansible.builtin.assert:
