feat: assert tempdir is actually a directory
Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

--- a/tests/integration/targets/tempfile/tasks/main.yml
+++ b/tests/integration/targets/tempfile/tasks/main.yml
@@ -46,6 +46,7 @@
   ansible.builtin.assert:
     that:
       - test_dir_check_result.stat.exists
+      - test_dir_check_result.stat.isdir
 
 - name: Assert `/var` value is part of temp dir path
   ansible.builtin.assert:
