--- a/tests/integration/targets/tempfile/tasks/main.yml
+++ b/tests/integration/targets/tempfile/tasks/main.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2026, Alexei Znamensky (@russoz)
+# Copyright (c) 2026, Ilya Bogdanov (@zeerayne)
 # GNU General Public License v3.0+ (see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt)
 # SPDX-License-Identifier: GPL-3.0-or-later
 
