feat: improve assert for the directory created by `tempfile`
Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

--- a/tests/integration/targets/tempfile/tasks/main.yml
+++ b/tests/integration/targets/tempfile/tasks/main.yml
@@ -51,7 +51,7 @@
 - name: Assert `/var` value is part of temp dir path
   ansible.builtin.assert:
     that:
-      - test_tempdir.path | regex_search("/var")
+      - test_tempdir.path.startswith("/var/test")
 
 - name: Remove tempdir
   community.openwrt.file:
