feat: template module implemented
This is mostly copy of built-in `template`  module.
Code taken from here:
https://github.com/ansible/ansible/blob/devel/lib/ansible/plugins/action/template.py

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -70,6 +70,8 @@ files:
     maintainers: $team_repo_mgrs
   $modules/sysctl.sh:
     maintainers: $team_repo_mgrs
+  $modules/template.py:
+    maintainers: zeerayne
   $modules/uci.py:
     maintainers: $team_repo_mgrs
   $modules/uci.sh:
