--- a/docs/docsite/extra-docs.yml
+++ b/docs/docsite/extra-docs.yml
@@ -9,6 +9,7 @@ sections:
       - user_guide
       - migration_guide
       - migration_apk_guide
+      - howto_guide
   - title: Developer Guides
     toctree:
       - mod_dev_guide
