--- a/tests/integration/targets/setup/tasks/main.yml
+++ b/tests/integration/targets/setup/tasks/main.yml
@@ -7,6 +7,10 @@
   community.openwrt.setup:
   register: setup_result
 
+- name: Pring facts
+  ansible.builtin.debug:
+    var: setup_result
+
 - name: Assert setup gathered facts
   ansible.builtin.assert:
     that:
@@ -17,3 +21,11 @@
   ansible.builtin.assert:
     that:
       - setup_result.ansible_facts.ansible_os_family is defined
+
+- name: Assert date/time facts
+  vars:
+    dt: "{{ setup_result.ansible_facts.ansible_date_time }}"
+  ansible.builtin.assert:
+    that:
+      - setup_result.ansible_facts.ansible_date_time is defined
+      - dt.date == dt.year + "-" + dt.month + "-" + dt.day
