feat: add `tempfile` module (#126)
* feat: add `tempfile` module

* feat: `tempfile` maintainer is zeerayne

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* feat: drop explicit mention of default prefix value in `tempfile` docs

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* feat: improve assert condition in `tempfile` tests

Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

* feat: assert that tempfile is actually a file

Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

* feat: assert tempdir is actually a directory

Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

* feat: copyrights for `tempfile`

* feat: `version_added` for `tempfile` module

* feat: use dot as separator between prefix and random chars

* feat: drop explicit mention of deafult value of `path` in `tempfile` docs

* feat: improve assert for the directory created by `tempfile`

Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

* feat: improve assert conditions for `tempfile` module

* feat: add notes about always changed status for `tempfile` module

* feat: explicit attributes in `tempfile` docs

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

* feat: `tempfile` - correctly return `path` if check_mode

* sanity: SC3003 and SC3045 are compatible with `ash`

* feat: `tempfile.sh` declares PARAMS & RESPONSE_VARS in `init()`

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>

---------

Co-authored-by: Alexei Znamensky <103110+russoz@users.noreply.github.com>
Co-authored-by: Jonny007-MKD <Jonny007-MKD@users.noreply.github.com>

--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -70,6 +70,10 @@ files:
     maintainers: $team_repo_mgrs
   $modules/sysctl.sh:
     maintainers: $team_repo_mgrs
+  $modules/tempfile.py:
+    maintainers: zeerayne
+  $modules/tempfile.sh:
+    maintainers: zeerayne
   $modules/uci.py:
     maintainers: $team_repo_mgrs
   $modules/uci.sh:
