--- a/tests/integration/targets/service/tasks/main.yml
+++ b/tests/integration/targets/service/tasks/main.yml
@@ -39,6 +39,10 @@
     name: cron
     state: started
 
+- name: Pause for 10 seconds
+  ansible.builtin.pause:
+    seconds: 10
+
 - name: Check cron running
   community.openwrt.command:
     cmd: service cron running
@@ -50,6 +54,10 @@
   community.openwrt.service:
     name: cron
     state: stopped
+
+- name: Pause for 10 seconds
+  ansible.builtin.pause:
+    seconds: 10
 
 - name: Check cron running
   community.openwrt.command:
