--- a/extensions/molecule/integration_test/molecule.yml
+++ b/extensions/molecule/integration_test/molecule.yml
@@ -6,15 +6,15 @@ driver:
   name: docker
 platforms:
   - name: openwrt_x86_64-25.12.0-rc5
-    image: openwrt/rootfs:x86_64-25.12.0-rc5
+    image: ghcr.io/openwrt/rootfs:x86_64-25.12.0-rc5
     command: /sbin/init
     pre_build_image: true
   - name: openwrt_x86_64-24.10.4
-    image: openwrt/rootfs:x86_64-24.10.4
+    image: ghcr.io/openwrt/rootfs:x86_64-24.10.4
     command: /sbin/init
     pre_build_image: true
   - name: openwrt_x86_64-23.05.6
-    image: openwrt/rootfs:x86_64-23.05.6
+    image: ghcr.io/openwrt/rootfs:x86_64-23.05.6
     command: /sbin/init
     pre_build_image: true
 scenario:
