--- a/tests/integration/targets/setup/tasks/main.yml
+++ b/tests/integration/targets/setup/tasks/main.yml
@@ -28,5 +28,9 @@
   ansible.builtin.assert:
     that:
       - dt is defined
-      - dt.date == dt.year + "-" + dt.month + "-" + dt.day
+      - dt.date == "{{ dt.year }}-{{ dt.month }}-{{ dt.day }}"
+      - dt.time == "{{ dt.hour }}-{{ dt.minute }}-{{ second }}"
+      - dt.iso8601_basic_short == {{ dt.year }}-{{ dt.month }}-{{ dt.day }}T{{ dt.hour }}-{{ dt.minute }}-{{ second }}"
+      - dt.epoch == dt.epoch_int
+      - dt.tz == dt.tz_dst
       - dt.date is ansible.builtin.match("\d\d\d\d-\d\d-\d\d")
